<resources>
    <string name="app_name" translatable="false">GülserenTube</string>
    <string name="theme_title">Theme</string>
    <string name="light_theme_title">Light theme</string>
    <string name="dark_theme_title">Dark theme</string>
    <string name="notification_channel_id" translatable="false">GülserenTube</string>
    <string name="notification_channel_name">Popup Player</string>
    <string name="notification_channel_description">Popup Player Bildirimleri</string>
    <string name="general_channel_name">General</string>
    <string name="subscribe_button_title">Abone Ol</string>
    <string name="subscribed_button_title">Abonesiniz</string>
    <string name="unsubscribed">Abonelikten Çık</string>
    <string name="subscription_change_failed">Bir hata oluştu -Ab1</string>
    <string name="subscription_update_failed">Bir hata oluştu -Ab2</string>
    <string name="tab_subscriptions">Abonelikler</string>
    <string name="view_count_text">%1$s Görüntülenme</string>
    <string name="upload_date_text">Yayınlanma tarihi :%1$s</string>
    <string name="short_thousand">Bin</string>
    <string name="short_million">Milyon</string>
    <string name="short_billion">Milyar</string>
    <string name="no_subscribers">Abone yok</string>
    <plurals name="subscribers">
        <item quantity="one">%s abone</item>
        <item quantity="other">%s abone</item>
    </plurals>
    <string name="no_views">Görüntülenme yok</string>
    <plurals name="views">
        <item quantity="one">%s görüntülenme</item>
        <item quantity="other">%s görüntülenme</item>
    </plurals>
    <string name="no_videos">Video yok</string>
    <string name="videos">Videolar</string>
    <string name="charset_most_special_characters_value" translatable="false">[\\n\\r|\\?*&lt;":&gt;/']+</string>
    <string name="title_activity_history">Geçmiş</string>
    <string name="delete_item_search_history">Bunu arama geçmişinden silmek mi istiyorsunuz ?</string>
    <string name="delete_all_history_prompt">Arama geçmişini tamamen temizlemek mi istiyorsunuz ?</string>
    <string name="title_recently_played">Son zamanlarda izlenenler</string>
    <string name="title_most_played">En çok izlenenler</string>
    <string name="trending">Popüler</string>
    <string name="discover">Keşfet</string>
    <string name="library">Kütüphane</string>
    <string name="music">Müzik</string>
    <string name="entertainment">Eğlence</string>
    <string name="films">Filmler</string>
    <string name="gaming">Oyun</string>
    <string name="sports">Spor</string>
    <string name="cars">Arabalar</string>
    <string name="pets">Evcil Hayvanlar</string>
    <string name="title_activity_popup_player">Popup Player</string>
    <string name="play_queue_remove">Kaldır</string>
    <string name="start_here_on_main">Oynat</string>
    <string name="youtube" translatable="false">GülserenTube</string>
    <string name="new_playlist">Oynatma listesi</string>
    <string name="create_new_playlist">Oynatma listesi oluştur</string>
    <string name="playlist_name_input">Oynatma listesi adı</string>
    <string name="append_playlist">Oynatma listesine ekle</string>
    <string name="set_as_playlist_thumbnail">Oynatma listesi kapağı olarak ayarla</string>
    <string name="bookmark_playlist">Oynatma listesi oluştur</string>
    <string name="added_playlist_to_bookmark">Oynatma listesi kütüphaneye eklendi</string>
    <string name="removed_playlist_from_bookmark">Oynatma listesi kütüphaneden silindi</string>
    <string name="delete_playlist_prompt">Oynatma listesini silmek mi istiyorsunuz ?</string>
    <string name="playlist_creation_success">Oynatma listesi oluşturuldu</string>
    <string name="playlist_add_stream_success">Oynatma listesine eklendi</string>
    <string name="playlist_thumbnail_change_success">Oynatma listesi kapağı değiştirildi</string>
    <string name="caption_none">Altyazılar</string>
    <string name="caption_auto_generated">Otomatik</string>
    <string name="playback_speed_normal">Normal</string>
    <string name="limit_data_usage_none_description">Limit yok</string>
    <string name="limit_mobile_data_usage_value" translatable="false">@string/limit_data_usage_none_key</string>
    <string-array name="limit_data_usage_description_list">
        <item>@string/limit_data_usage_none_description</item>
        <item>1080p60</item>
        <item>1080p</item>
        <item>720p60</item>
        <item>720p</item>
        <item>480p</item>
        <item>360p</item>
        <item>240p</item>
        <item>144p</item>
    </string-array>
    <string name="example_video_title">GülserenTube Video Title</string>
    <string name="example_channel_title">GülserenTube</string>
    <string name="new_version_message">Uygulamanın eski bir versiyonunu kullanıyorsunuz. Lütfen play store\'a giderek uygulamayı güncelleyin.</string>
    <string name="new_version_update">Güncelle</string>
    <string name="new_version_later">Sonra yaparım(yapmadı...)</string>
    <string name="settings">Ayarlar</string>
    <string name="default_resolution_title">Varsayılan video çözünürlüğü</string>
    <string name="default_popup_resolution_title">Varsayılan Pop-up çözünürlüğü</string>
    <string name="show_higher_resolutions_title">Daha yüksek çözünürlük göster</string>
    <string name="show_higher_resolutions_summary">Sadece bazı cihazlar 2K/4K videoları destekler</string>
    <string name="popup_tips_key">popup_tips_key</string>
    <string name="popup_tips_title">Popup penceresi</string>
    <string name="popup_tips_summary">Pop-up penceresine 3sn basılı tutarak boyutunu değiştirebilirsiniz.</string>
    <string name="popup_remember_size_pos_title">Pop-up boyutunu ve yeri</string>
    <string name="popup_remember_size_pos_summary">En son Pop-up boyutunu ve yerini kaydet</string>
    <string name="metadata_cache_wipe_title">Çerez verilerini sil</string>
    <string name="metadata_cache_wipe_summary">Kayıtlı olan bütün çerez verilerini silerek uygulamayı tertemiz hale getir</string>
    <string name="metadata_cache_wipe_complete_notice">Bütün çerez verileri silindi</string>
    <string name="auto_queue_title">Bir sonraki videoyu otomatik oynat</string>
    <string name="auto_queue_summary">İzlediğiniz video bittiğinde, sıradaki video otomatik olarak başlar</string>
    <string name="show_search_suggestions_title">Arama önerileri</string>
    <string name="show_search_suggestions_summary">Arama yaparken önerilenler</string>
    <string name="enable_search_history_title">Arama geçmişi</string>
    <string name="enable_search_history_summary">Yaptığınız aramaları telefonda bir yere kaydeder.</string>
    <string name="enable_watch_history_title">Geçmiş ve Çerezler</string>
    <string name="enable_watch_history_summary">İzlediğiniz videoları kaydedip hatırlar</string>
    <string name="resume_on_audio_focus_gain_title">Videoyu oynatmaya devam et</string>
    <string name="resume_on_audio_focus_gain_summary">Bölündükten sonra çalmaya devam et (örn. birisi aradıktan sonra)</string>
    <string name="clear_views_history_title">İzleme geçmişini sil</string>
    <string name="clear_views_history_summary">İzleme geçmişinizi cihazdan siler</string>
    <string name="delete_view_history_alert">İzleme geçmişini silmek mi istiyorsunuz ?</string>
    <string name="view_history_deleted">İzleme geçmişi silindi</string>
    <string name="clear_search_history_title">Arama geçmişini sil</string>
    <string name="clear_search_history_summary">Arama geçmişini siler</string>
    <string name="delete_search_history_alert">Arama geçmişini silmek mi istiyorsunuz ?</string>
    <string name="search_history_deleted">Arama geçmişi silindi</string>
    <string name="next_video_title">Sıradaki</string>
    <string name="url_not_supported_toast">URL desteklenmiyor</string>
    <string name="settings_category_player_title">Popup Player</string>
    <string name="settings_category_video_audio_title">Video &amp; Ses</string>
    <string name="settings_category_history_title">Geçmiş &amp; Çerezler</string>
    <string name="popup_playing_toast">Pop-up modunda oynat</string>
    <string name="popup_playing_append">Pop-up çalma listesine eklendi</string>
    <string name="content">İçerik</string>
    <string name="duration_live">Canlı</string>
    <string name="duration_live_button" translatable="false"> • Canlı</string>
    <string name="all">Tümü</string>
    <string name="channel">Kanal</string>
    <string name="playlist">Oynatma listesi</string>
    <string name="local_playlist">Yerel Oynatma listesi</string>
    <string name="yes">Evet</string>
    <string name="popup_resizing_indicator_title">Yeniden Boyutlandır</string>
    <string name="best_resolution">En iyi çözünürlük</string>
    <string name="play_all">Tümünü Oynat</string>
    <string name="switch_to_main">Tam ekran olarak oynat</string>
    <string name="controls_popup_title">Popup</string>
    <string name="setting_rate_me_now">Uygulamaya oy ver</string>
    <string name="setting_tell_your_friend">Arkadaşlarına uygulamadan bahset</string>
    <string name="setting_feedback">Geribildirim</string>
    <string name="title_activity_about">Hakkında</string>
    <string name="title_version_name">Versiyon</string>
    <string name="action_settings">Ayarlar</string>
    <string name="minutes_ago">%d dakika önce</string>
    <string name="hours_ago">%d saat önce</string>
    <string name="days_ago">%d gün önce</string>
    <string name="months_ago">%d ay önce</string>
    <string name="thanks_for_your_supports">Desteğiniz için teşekkürler!</string>
    <string name="msg_nothing">%s içinde birşey yok</string>
    <string name="msg_no_apps">Bunu hiç bir uygulama yapamaz</string>
    <string name="autoplay">Otomatik Oynat</string>
    <string name="dialog_exit_app_msg">Gülserenin burnu çok güzel değil mi ?</string>
    <string name="done">Bitti</string>
    <string name="me">Ben</string>
    <string name="dialog_warning_title">Uyarı</string>
    <string name="unknown_content">[Bilinmiyor]</string>
    <string name="cancel">İptal</string>
    <string name="share">Paylaş</string>
    <string name="retry">Tekrar dene</string>
    <string name="create">Oluştur</string>
    <string name="delete">Sil</string>
    <string name="controls_add_to_playlist_title">Kaydet</string>
    <string name="confirm_title_dialog">Onayla</string>
    <string name="the_app_is_under_maintenance">Ne yazık ki uygulama bakımda</string>
    <string name="search">Youtube\'da ara</string>
    <string name="share_dialog_title">Şununla paylaş :</string>
    <string name="fragment_whats_new">Fırından Taze Çıktı</string>
    <string name="ok">Tamam</string>
    <string name="feedback_message">Şimdi size çok zor bir soru soracağım.</string>
    <string name="rating_message">Gülserenin burnu gerçekten çok güzel değil mi ?</string>
    <string name="rating_not_really">Evet çok güzel</string>
    <string name="rating_yes">Evettttt!</string>
    <string name="rating_on_play_store">Şimdiye kadar daha güzel bir burun gördünüz mü ?</string>
    <string name="rating_no_thanks">Evet rüyamda </string>
    <string name="rating_ok_sure">Hayır tabiki</string>
    <string name="rating_giving_feedback">Böyle bir burun için adam öldürür müsünüz ?</string>
    <string name="title_activity_recaptcha">reCAPTCHA challenge</string>
    <string name="subtitle_activity_recaptcha">Press \"Done\" when solved</string>
    <string name="recaptcha_request_toast">reCAPTCHA challenge requested</string>
    <string name="msg_popup_permission">Popup modunu kullanmak için bu izin gerekiyor</string>
    <string name="msg_delete_successfully">Başarıyla silindi</string>
    <string name="no_results">Hiç video bulunamadı</string>
    <string name="download">İndir</string>
    <string name="video">Video</string>
    <string name="audio">Ses</string>
    <string name="save_to_device">Cihaza kaydet</string>
    <string name="file_name">Dosya adı</string>
</resources>